--- a/config.json
+++ b/config.json
@@ -6,9 +6,9 @@
     "password":"4321",
     "timeout":600,
     "method":"aes-256-cfb",
-    "protocol":"auth_chain_a",
+    "protocol":"origin",
     "protocol_param":"",
-    "obfs":"tls1.2_ticket_auth",
+    "obfs":"http_simple",
     "obfs_param":"",
     "redirect":"",
     "dns_ipv6":false,
